Add picture setting

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,6 +13,8 @@
 
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
+      
+      <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png'  %>
 
       <%= f.submit yield(:button_text), class: "btn btn-primary" %>
     <% end %>
