--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, @user.name) %>
 <h1>あとで消す</h1>
 <%= @user.name %>
+<%= image_tag @user.picture.url if @user.picture? %>
 <%= @user.email %>
