--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,8 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<% provide(:title, "プロフィール編集") %>
+<% provide(:button_text, '完了') %>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+      <%= render 'form' %>
+  </div>
+</div>
