--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, '新規登録') %>
-<% provide(:button_text, '完了') %>
+<% provide(:button_text, '登録') %>
 <h1>新規登録</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
