--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,3 +3,4 @@
 <%= @user.name %>
 <%= image_tag @user.picture.url if @user.picture? %>
 <%= @user.email %>
+<%= link_to "編集", edit_user_path(@user) %>
