--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
-        <li><%= link_to "投稿", '#' %></li>
+        <li><%= link_to "投稿", new_micropost_path %></li>
         <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
        ↓あとでshowに移動
         <li><%= link_to "編集", edit_user_path(current_user) %></li>
