--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,3 +4,5 @@
 <%= image_tag @user.picture.url if @user.picture? %>
 <%= @user.email %>
 <%= link_to "編集", edit_user_path(@user) %>
+<%= link_to "削除", @user, method: :delete,
+                             data: { confirm: "本当に削除してもいいですか?" } %>
