--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -1,6 +1,8 @@
 <%= form_for(@micropost) do |f| %>
+<%= render 'shared/error_messages', object: f.object %>
     
       <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png'  %>
+      
    
       <%= f.label :name %>
       <%= f.text_field :name, calss: 'form-control' %>
@@ -19,6 +21,9 @@
 
       <%= f.label :holiday %>
       <%= f.text_field :holiday, calss: 'form-control' %>
+      
+      <%= f.label :"カテゴリー" %><br>
+  　   <%= f.select :category_id, [["チーズ", 1], ["タピオカ", 2], ["肉", 3], ["ラーメン", 4], ["韓国", 5], ["いちご", 6],["抹茶",7],["オムレツ",8],["その他",9]] ,class:"form-control" %>
       
       <%= f.submit yield(:button_text), class: "btn btn-primary" %>
 <% end %>
