--- a/app/views/microposts/edit.html.erb
+++ b/app/views/microposts/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Microposts#edit</h1>
-<p>Find me in app/views/microposts/edit.html.erb</p>
+<% provide(:title, '投稿編集') %>
+<% provide(:button_text, '完了') %>
+<h1>投稿編集</h1>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+      <%= render 'form' %>
+  </div>
+</div>
