--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, @microposts.name) %>
+
 <h3>料理名:<%= @microposts.name %></h3>
 <h3>おすすめポイント:<%= @microposts.recommendation %></h3>
 <h4>お店情報</h4>
@@ -5,7 +7,7 @@
 <h3>場所：<%= @microposts.plase %></h3>
 <%= @microposts.time %>
 <%= @microposts.holiday %>
-<%= image_tag @microposts.picture.url if @microposts.picture %>
+<%= image_tag @microposts.picture.url unless @microposts.picture.blank? %>
 
 
 
