--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@user) do |f| %>
-<%= render 'shared/error_messages' %>
+<%= render 'shared/error_messages', object: f.object %>
      
 
       <%= f.label :name %>
@@ -11,7 +11,7 @@
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, "パスワード確認" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
       
       <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png'  %>
