--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,12 +4,22 @@
 <%= image_tag @user.picture.url if @user.picture? %>
 <%= @user.email %>
 
+<h1>いいねした投稿</h1>
+<% if @user.likes.any? %>
+  <% @likes.each do |like| %>
+    <%= image_tag like.picture.url unless like.picture.blank? %>
+    <%= like.name %>
+  <% end %>
+<% end %>
+
+<h1>投稿した内容</h1>
 <div class="col-md-8">
     <% if @user.microposts.any? %>
         <%= render @microposts %>
       <%= will_paginate @microposts %>
     <% end %>
 </div>
+
 
 <%= link_to "編集", edit_user_path(@user) %>
 <%= link_to "削除", @user, method: :delete,
