--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -1,9 +1,8 @@
 <%= form_for(@micropost) do |f| %>
 <%= render 'shared/error_messages', object: f.object %>
     
-      <%= f.file_field :picture, multiple: true, accept: 'image/jpeg,image/gif,image/png'  %>
-      
-   
+      <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png'  %>
+
       <%= f.label :name %>
       <%= f.text_field :name, calss: 'form-control' %>
 
