--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,6 +14,7 @@
       <%= f.label :password_confirmation, "パスワード確認" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
       
+      <%= f.label :picture %>
       <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png'  %>
 
       <%= f.submit yield(:button_text), class: "btn btn-primary" %>
