--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,4 +1,4 @@
 <li>
-  <%= image_tag micropost.picture.url unless micropost.picture.blank? %>
+  <%= image_tag micropost.picture.url(size:50) unless micropost.picture.blank? %>
   <%= link_to micropost.name, micropost %>
 </li>
