--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -2,15 +2,15 @@
     <span class="like">
     <% if micropost.like?(current_user) %>
       <%= form_for(micropost.likes.find_by(user_id: current_user.id), method: :delete, remote: true) do |f| %>
-        <%= button_tag(class: "btn btn-default btn-xs") do %>
-          <%= content_tag :span, "いいね", class: "glyphicon glyphicon-heart" %>
+        <%= button_tag(class: "btn btn-default btn-xs rounded-circle") do %>
+          <%= content_tag :span, "", class: "fas fa-heart fa-lg" %>
         <% end %>
       <% end %>
     <% else %>
       <%= form_for(micropost.likes.build, remote: true) do |f| %>
         <div><%= hidden_field_tag :micropost_id, micropost.id %></div>
-        <%= button_tag(class: "btn btn-default btn-xs") do %>
-          <%= content_tag :span, "いいね", class: "glyphicon glyphicon-heart-empty" %>
+        <%= button_tag(class: "btn btn-default btn-xs rounded-circle") do %>
+          <%= content_tag :span, "", class: "far fa-heart fa-lg" %>
         <% end %>
       <% end %>
     <% end %>
