--- a/app/views/microposts/edit.html.erb
+++ b/app/views/microposts/edit.html.erb
@@ -1,9 +1,14 @@
 <% provide(:title, '投稿編集') %>
 <% provide(:button_text, '完了') %>
-<h1>投稿編集</h1>
 
+
+<div class="form-block pt-3">
+    <div class="form-title text-center">
+  投稿編集
+   </div>
+  <div class="container">
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
       <%= render 'form' %>
-  </div>
+</div>
+</div>
 </div>
