--- a/app/views/microposts/new.html.erb
+++ b/app/views/microposts/new.html.erb
@@ -1,9 +1,15 @@
 <% provide(:title, '新規投稿') %>
 <% provide(:button_text, '投稿') %>
-<h1>新規投稿</h1>
 
+
+<div class="form-block pt-3">
+  <div class="form-title text-center">
+  新規投稿
+ </div>
+<div class="container">
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <!-- <h3 class="new-post-title">新規投稿</h3> -->
       <%= render 'form' %>
   </div>
+</div>
 </div>
