--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,5 @@
+<div class="post-form col-11 col-md-5 mx-auto">
+
 <%= form_for(@user) do |f| %>
 <%= render 'shared/error_messages', object: f.object %>
      
@@ -11,7 +13,7 @@
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "パスワード確認" %>
+      <%= f.label :password_confirmation, "パスワード(確認)" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
       
       <%= f.label :picture %>
@@ -28,3 +30,5 @@
     }
   });
 </script>
+
+</div>
