--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,13 @@
 <% provide(:title, "プロフィール編集") %>
 <% provide(:button_text, '完了') %>
 
+<div class="form-block pt-3">
+    <div class="form-title text-center">
+  プロフィール編集
+ 　</div>
+  <div class="container">
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
       <%= render 'form' %>
-  </div>
+</div>
+</div>
 </div>
