--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -41,7 +41,7 @@
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: image-url("/assets/chies.png");
+  background-image: image-url("chies.png");
   background-size: cover;
   text-align: center;
   color: black;
